# TickAggregator

./: .env  .gitignore  Cargo.toml  README.md  appsettings.yaml  bash_linux.sh  bash_mac.sh  bash_windows.sh  build.rs
resources/: icon.rc  icon.res
src/: main.rs
src/pkg/: clickhouse_client.rs  config.rs  db.rs  logger.rs  mod.rs  postgre_db.rs  save_config.rs
src/pkg/aggregator/: mod.rs  symbol_rotator.rs  ticker_aggregator.rs
src/pkg/dbcontext/: entities.rs  kline.rs  migration.rs  mod.rs
src/pkg/exchanges/: exchange.rs  exchange_client.rs  exchange_entities.rs  mod.rs
src/pkg/exchanges/binance/: binance_api.rs  mod.rs  rate_limited_client.rs
src/pkg/exchanges/bitget/: bitget_api.rs  mod.rs  rate_limited_client.rs
src/pkg/exchanges/bybit/: bybit_api.rs  mod.rs  rate_limited_client.rs
src/pkg/exchanges/okx/: mod.rs  okx_api.rs  rate_limited_client.rs
