[package]
name = "TickAggregator"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
once_cell = "1.19"
log = "0.4"
fern = "0.6"
chrono = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"   # for loading env vars from .env file (optional)
env_logger = "0.10"  # initialize logging
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "gzip", "rustls-tls"] }
rand = "0.8"
serde_json = "1.0.142"
async-trait = "0.1.89"
winres = "0.1.12"

[build-dependencies]
winres = "0.1.12"
